--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <artifactId>jcurses</artifactId>
     <version>1.0.0</version>
 
-    <name></name>
-    <description></description>
-    <url></url>
+    <name>JCurses</name>
+    <description>Java Bindings for NCurses</description>
+    <url>https://www.gnu.org/software/ncurses</url>
 
     <licenses>
         <license>
@@ -20,13 +20,13 @@
 
     <developers>
         <developer>
-            <name></name>
-            <email></email>
+            <name>Rudolf Schmidt</name>
+            <email>info@rudolfschmidt.com</email>
         </developer>
     </developers>
 
     <scm>
-        <url></url>
+        <url>https://github.com/rudolfschmidt/jcurses</url>
     </scm>
 
     <properties>
@@ -36,6 +36,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.5.1</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -110,6 +115,29 @@
                 <configuration>
                     <source>9</source>
                     <target>9</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.rudolfschmidt.Main</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
